# lscolors

./: .dircolors  .flake8  .gitignore  MANIFEST.in  Makefile  PKG-README  Python.mk  README  README.ansi  README.md  README.txt  argparse.py  argparse.py-lib.py  coloring.py  pyproject.toml  test-colors.sh  view-colors.sh
argformat/: __init__.py  ansi.py  markdown.py
docs/: chart  chart.md  check  check.md  configs.md  docs  docs.md  help.md  report  report.md  samples  samples.md  sort  sort.md
docs/ansi/: chart.ansi  chart.txt  check.ansi  check.txt  configs.ansi  configs.txt  docs.ansi  docs.txt  help.ansi  help.txt  paint.txt  report.ansi  report.txt  samples.ansi  samples.txt  sort.ansi  sort.txt
docs/md/: chart.md  check.md  configs.md  docs.md  help.md  report.md  samples.md  sort.md
docs/txt/: chart.txt  check.txt  configs.txt  docs.txt  help.txt  report.txt  samples.txt  sort.txt
lscolors/: __init__.py  __main__.py  __version__.py  application.py  basecli.py  basecmd.py  chart.py  check.py  cli.py  cmd.py  colors.py  command.py  config.py  configs.py  mandown_.py  report.py  samples.py  sort.py
lscolors/argformat/: __init__.py  ansi.py  command.py  markdown.py
lscolors/command/: __init__.py
lscolors/command/commands/: __init__.py  chart.py  check.py  configs.py  docs.py  paint.py  report.py  samples.py  sort.py
lscolors/command/utils/: mkdir.py
lscolors/commands/: __init__.py  basecmd.py  chart.py  check.py  configs.py  docs.py  paint.py  report.py  samples.py  sort.py
lscolors/commands/utils/: __init__.py  colors.py  config.py  mkdir.py
lscolors/sample-configs/: .dircolors  .lscolors.yml
tests/: test_.py  test_basecli.py  test_cli.py  test_libcurses.py
