[project]
name = "lscolors"
version = "1.0.0"
description = "dircolors utilities"
authors = [
    {name = "Russel Lane", email = "russel@rlane.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["dircolors", "xterm-256color", "color-scheme", "terminal", "shell", "ls", "tree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Console Fonts",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "ansicolors>=1.1.8",
    "argcomplete>=2.0.0",
    "pyyaml>=6.0",
    "termui>=0.0.1",
    "toml>=0.10.2",
    "tomli>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/russellane/lscolors"

[project.scripts]
lscolors = "lscolors.cli:main"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.1.0",
    "flake8-bugbear>=22.1.11",
    "flake8-pydocstyle>=0.2.0",
    "flake8-pylint>=0.1.3",
    "flake8-simplify>=0.18.0",
    "flake8>=4.0.1",
    "isort>=5.10.1",
    "pytest>=7.0.1",
]

[tool.pdm.scripts]
# .vimrc: set makeprg=pdm\ build
pre_build.shell = """set -x;
ctags -R --languages=python __pypackages__ lscolors tests;
python -m black -q lscolors tests &&
python -m isort lscolors tests &&
python -m flake8 lscolors tests &&
python -m pytest --exitfirst --showlocals --verbose tests;
#{ export COLUMNS=97; python -m lscolors --help |
#python -m mandown --width 89 --use-config >README.md; };
"""
rebuild.shell = "set -x; rm -f pdm.lock; pdm run clean && pdm install && pdm build"
clean.shell = """set -x;
rm -rf __pypackages__ .pytest_cache dist tags;
find . -type f -name '*.py[co]' -delete &&
find . -type d -name __pycache__ -delete
"""
# bump depends on: `pip install --user pdm-bump`
bump-micro.shell = "set -x; pdm bump micro && pdm run rebuild"
publish.shell = """set -x; cd dist; echo *.whl |
cpio -pdmuv `pip config get global.find-links`
"""

# Don't name `install` else `pre_install` and/or `post_install` will also run.
#xxinstall.shell = "set -x; unset PYTHONPATH; pip install --user lscolors"
#uninstall.shell = "set -x; unset PYTHONPATH; pip uninstall lscolors"
xxinstall.shell = "set -x; pipx install lscolors"
uninstall.shell = "set -x; pipx uninstall lscolors"
reinstall.shell = "set -x; pdm run uninstall; pdm run xxinstall"

[tool.pytest.ini_options]
addopts = "--ignore=__pypackages__/"

[tool.black]
line-length = "97"

[tool.isort]
line_length = "97"
profile = "black"

[tool.pylint.format]
max-line-length = "97"

[tool.pylint.messages_control]
enable = ["useless-suppression"]
fail-on = ["I0021"]             # useless-suppression
disable = [
    "C0330", "C0326",           # black
    "R0801",                    # Similar lines in 2 files - cleo commands
]

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D105",     # pep257 numpy google   # Missing docstring in magic method
    "D202",     # pep257 numpy google   # No blank lines allowed after function docstring
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

# vim: set ts=4 sw=4 et:
